--- a/ip-address-tracker-master/index.html
+++ b/ip-address-tracker-master/index.html
@@ -11,7 +11,8 @@
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <title>Frontend Mentor | IP Address Tracker</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -27,12 +28,14 @@
   </style>
 </head>
 
-<body>
+<body onload="getLocationData()">
   <div class="container">
     <div class="formspace">
       <h1>IP Address Tracker</h1>
       <div class="field">
-        <input type="text" id="ipinput" placeholder="Search for any IP address or domain">
+        <input type="text" id="ipinput"
+          pattern="/^([1-9][0-9]?|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.([1-9][0-9]?|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.([1-9][0-9]?|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.([1-9][0-9]?|1[0-9][0-9]|2[0-4][0-9]|25[0-5])$/gi"
+          placeholder="Search for any IP address or domain">
         <button id="submit" onclick="getLocationData()"><img src="./images/icon-arrow.svg" alt="Forward arrow"></button>
       </div>
 
@@ -64,43 +67,72 @@
       </article>
     </div>
     <div id="maparea">
-      jjj
+
     </div>
   </div>
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  </div>
   <script>
-    
-      function getLocationData() {
-        const apiKey = 'at_h7CULRHWlCZtAJGk3hQVpFHIDJhvk';
-        const ipAddress = $("#ipinput").val();
-        const apiUrl = `https://geo.ipify.org/api/v2/country?apiKey=${apiKey}&ipAddress=${ipAddress}`;
 
-        // Proxy URL using crossorigin.me
-        const proxyUrl = 'https://api.allorigins.win/raw?url=';
+    function initMap(latitude, longitude) {
+      // Create a Leaflet map and set its view to the specified coordinates
+      const map = L.map('maparea').setView([latitude, longitude], 13);
 
-        // Construct the final URL with the proxy
-        const finalUrl = proxyUrl + encodeURIComponent(apiUrl);
+      // Add a tile layer (OpenStreetMap in this example)
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+      }).addTo(map);
 
-        const options = {
-          method: 'GET',
-        };
+      // Add a marker to the map
+      L.marker([latitude, longitude]).addTo(map);
+    }
+    function getLocationData() {
+      const ipAddress = $("#ipinput").val();
+      const apiUrl = `https://ipapi.co/${ipAddress}/json/`;
 
-        fetch(finalUrl, options)
-          .then(response => response.json())
-          .then(data => {
-            //data
-            $("#ip").text(data.ip);
-            $("#location").text(data.location.region);
-            $("#timezone").text(data.location.timezone);
-            $("#isp").text(data.isp);
-            console.log(data)
-          })
-          .catch(error => console.error('Error:', error));
+      // Proxy URL using crossorigin.me
+      const proxyUrl = 'https://api.allorigins.win/raw?url=';
+
+      // Construct the final URL with the proxy
+      const finalUrl = proxyUrl + encodeURIComponent(apiUrl);
+
+      const options = {
+        method: 'GET',
+      };
+
+      fetch(finalUrl, options)
+        .then(response => response.json())
+        .then(data => {
+          //data
+          $("#ip").text(data.ip);
+          $("#location").text(data.country_capital + ", " + data.country);
+          $("#timezone").text(data.utc_offset);
+          $("#isp").text(data.org);
+          initMap(data.latitude, data.longitude);
+          console.log(data)
+
+
+
+
+        })
+        .catch(error => {
+          Swal.fire({
+            icon: 'error',
+            title: 'Invalid address',
+            text: error,
+            footer: '<a href="https://www.techtarget.com/whatis/definition/IP-address-Internet-Protocol-Address">Need help?</a>'
+          });
+          console.error('Error:', error);
+        });
+    }
+    document.getElementById('ipinput').addEventListener('keydown', function (event) {
+      if (event.keyCode === 13) {
+        getLocationData();
       }
-  
+    });
+
   </script>
 </body>
 
