--- a/launch-countdown-timer-main/index.html
+++ b/launch-countdown-timer-main/index.html
@@ -1,31 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./style.css">
+  <script src="./script.js"></script>
   <title>Frontend Mentor | Launch countdown timer</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <div class="main">
+    <div class="message">
+      <h1> We're launching soon</h1>
+    </div>
+    <div class="timers">
+      <div class="timer-item">
 
-  We're launching soon
+        <div class="count">
+          <p id="days">08</p>
+        </div>
+      </div>
 
-  Days
-  Hours
-  Minutes
-  Seconds
-  
-  <div class="attribution">
+      <div class="timer-item">
+        <div class="count">
+          <p id="hours">23</p>
+        </div>
+
+      </div>
+
+      <div class="timer-item">
+        <div class="count">
+          <p id="minutes">55</p>
+        </div>
+
+      </div>
+
+      <div class="timer-item">
+        <div class="count">
+          <p id="seconds">41</p>
+        </div>
+
+      </div>
+    </div>
+    <div class="timer-item-labels">
+      <h3>Days</h3>
+      <h3>Hours</h3>
+      <h3>Minutes</h3>
+      <h3>Seconds</h3>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="social-icon">
+      <img src="./images/icon-facebook.svg" alt="Facebook">
+    </div>
+    <div class="social-icon">
+      <img src="./images/icon-pinterest.svg" alt="Pinterest">
+    </div>
+    <div class="social-icon">
+      <img src="./images/icon-instagram.svg" alt="Instagram">
+    </div>
+  </div>
+
+
+
+
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
+
 </html>
