--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,19 +15,19 @@
 </head>
 
 <body>
-  <div class="container">
+  <main class="container">
     <div class="card">
       <div class="img-section">
-        <img src="./images/image-qr-code.png" alt="">
+        <img src="./images/image-qr-code.png" alt="QR Code leading to Frontend Mentor website">
         <div class="text-section">
-          <h1> Improve your front-end skills by building projects</h1>
+          <h2> Improve your front-end skills by building projects</h2>
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </div>
     </div>
 
 
-  </div>
+  </main>
 
 
 
